ls-test/migration-v2/mock-script/mock-prefix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: high-risk-prefix
  namespace: ls-test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: high-risk.example.com
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: admin-default-svc
            port:
              number: 80
